chore(campaign_v2): web mock
